--- a/Client/index.html
+++ b/Client/index.html
@@ -18,11 +18,11 @@
     <input 
         type='text'
         id="name"
-        placeholder="Player name"/>
+        placeholder="Player Name"/>
     <input 
         type='text'
-        id="projectedPoints"
-        placeholder='Points scored?'/>
+        id="position"
+        placeholder='Player Position'/>
     <input 
         type='text'
         id="votes"
