--- a/Client/index.html
+++ b/Client/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>Fantasy Football</title>
+    <title>Fantasy Football Home</title>
 </head>
 <body class="container">
     <header id="nav">
         <button class="navButtons"><h2><a href="./second.html">Rankings</a></h2></button>
 
       </header>
-    <header>
+    <header id="homeHead">
 <h1>Who Should I Start?</h1>
-<div>
 <h2>A Scape Goat for All of Your Fantasy Football Decisions</h2>
+<div>
+<h2>Which of These QBS Would you Start?</h2>
 </div>
  </header>
 <main>
   
-    <form>
+    <form id="add">
         <h2>Add A Player</h2>
     <input 
         type='text'
@@ -38,13 +39,14 @@
 </form>
 
 <section id="playersContainer">Who Would You Start Vote</section>
-
+<section id="addBox"></section>
 <div id="randomatic">
     <h1>Pick a Random Player</h1>
+    <div id="randoButts">
     <button id="hailMaryQB">Random QB</button>
     <button id="hailMaryWR">Random WR</button>
     <button id="hailMaryRB">Random RB</button>
-    <button id="hailMary">Hail Mary</button>
+    </div>
 <section id="randomTeamBox">
     <h1>Team of Random Players</h1>
     <div>
