--- a/Client/wr.html
+++ b/Client/wr.html
@@ -7,28 +7,28 @@
     <title>Wide Receiver Rankings</title>
     <link rel="stylesheet" href="./index.css">
 </head>
-<body>
+<body class="rankBody">
     <header id="nav">
         <button class="navButtons"><h2><a href="./index.html">Home</a></h2></button>
        
        </header> 
        <section id="rankings">
         
-        <form>
+        <form class="where">
         <h1>Where to?</h1>
-        <select name="positions" id="positions" >
+        <select  name="positions" id="positions" >
             <option disabled selected>position</option>
             <option value="./second.html">Rankings Home</option>
             <option value="./qb.html">QuarterBacks</option>
             <option value="./wr.html">Wide Receivers</option>
             <option value="./rb.html">Running Backs</option>
 </select>
-<input type="button" value="go" onclick="goToNewPage()"/>
+<input class="go" type="button" value="go" onclick="goToNewPage()"/>
 </section>
     </form>
+    <h2 class="posHead">Wide Receivers</h1>
 
-       <div class="rank"><h2>Wide Receivers</h1>
-
+       <div class="rank">
 <ol>
 <li>Cooper Kupp</li>
 <li>Justin Jefferson</li>
@@ -62,7 +62,7 @@
 <li>Christian Kirk</li>
 
 </ol>
-
+</div>
 
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
