--- a/Client/index.html
+++ b/Client/index.html
@@ -27,14 +27,17 @@
         type='text'
         id="name"
         placeholder="Player Name"/>
-    <input 
-        type='text'
-        id="position"
-        placeholder='Player Position'/>
-    <input 
+        <input 
         type='text'
         id="imageURL"
         placeholder='Image URL'/>
+        <label for="posquest">Choose A position</label>
+    <select name= "posquest" id="position">
+        <option value="WR">WR</option>
+        <option value="WR">QB</option>
+        <option value="WR">RB</option>
+       </select>
+    
     <button>Add Player</button>
 </form>
 
