--- a/Client/index.html
+++ b/Client/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Fantasy Football Home</title>
 </head>
 <body class="container">
     <header id="nav">
-        <button class="navButtons"><h2><a href="/second.html">Rankings</a></h2></button>
+        <button class="navButtons"><h2><a href="./second.html">Rankings</a></h2></button>
 
       </header>
     <header id="homeHead">
@@ -78,6 +78,6 @@
 
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
