--- a/Client/rb.html
+++ b/Client/rb.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Running Back Rankings</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body class="rankBody">
     
     <header id="nav">
-        <button class="navButtons"><h2><a href="/index.html">Home</a></h2></button>
+        <button class="navButtons"><h2><a href="./index.html">Home</a></h2></button>
        
        </header> 
 
@@ -20,10 +20,10 @@
         <h1>Where to?</h1>
         <select name="positions" id="positions" >
             <option disabled selected>position</option>
-            <option value="/second.html">Rankings Home</option>
-            <option value="/qb.html">QuarterBacks</option>
-            <option value="/wr.html">Wide Receivers</option>
-            <option value="/rb.html">Running Backs</option>
+            <option value="./second.html">Rankings Home</option>
+            <option value="./qb.html">QuarterBacks</option>
+            <option value="./wr.html">Wide Receivers</option>
+            <option value="./rb.html">Running Backs</option>
 </select>
 <input class="go" type="button" value="go" onclick="goToNewPage()"/>
 </section>
@@ -66,6 +66,6 @@
 
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/playerArrays.js"></script>
+    <script src="./playerArrays.js"></script>
 </body>
 </html>
