--- a/Client/second.html
+++ b/Client/second.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Rankings Home</title>
     <title>Document</title>
 </head>
 <body class="rankBody">
     <header id="nav">
-        <button class="navButtons"><h2><a href="/index.html">Home</a></h2></button>
+        <button class="navButtons"><h2><a href="./index.html">Home</a></h2></button>
  
        </header>  
        <header><h1>Lane's Rankings</h1></header>
@@ -33,6 +33,6 @@
 
 
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/playerArrays.js"></script>
+    <script src="./playerArrays.js"></script>
 </body>
 </html>
