--- a/client/index.html
+++ b/client/index.html
@@ -77,7 +77,7 @@
 </main>
 
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
