--- a/client/wr.html
+++ b/client/wr.html
@@ -7,11 +7,24 @@
     <title>Wide Receiver Rankings</title>
     <link rel="stylesheet" href="./index.css">
 </head>
-<body class="rankBody">
-    <header id="nav">
-        <button class="navButtons"><h2><a href="./index.html">Home</a></h2></button>
-       
-       </header> 
+<link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+    crossorigin="anonymous"
+  />
+  <title>Fantasy Football Home</title>
+</head>
+<body class = "home_body">
+      <nav class="navbar navbar-dark bg-dark navbar-expand">
+          <div class="container-fluid">
+              <div class="collapse navbar-collapse">
+                <a class="nav-link nav-size" href="./index.html">Home</a>
+       <a class="nav-link nav-size" href="./random.html">Random Player Selector</a>
+      </div>
+      </div>
+  </nav>
+  <header><h1>Wide Receivers</h1></header>
        <section id="rankings">
         
         <form class="where">
@@ -26,7 +39,6 @@
 <input class="go" type="button" value="go" onclick="goToNewPage()"/>
 </section>
     </form>
-    <h2 class="posHead">Wide Receivers</h1>
 
        <div class="rank">
 <ol>
