--- a/client/index.html
+++ b/client/index.html
@@ -15,10 +15,24 @@
   </head>
   <body class = "home_body">
         <nav class="navbar navbar-dark bg-dark navbar-expand">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse">
-        <a class="nav-link nav-size" href="./second.html">Rankings</a>
-         <a class="nav-link nav-size" href="./random.html">Random Player Selector</a>
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target = "#main_menu" aria-controls="main_menu" aria-expanded="false">
+            <span class= "navbar-toggler-icon"></span>
+          </button>
+          <div id = "main_menu" class="collapse navbar-collapse">
+                  <ul class="navbar-nav me-auto">
+                  <li class= "nav-item"><a class = "nav-link active" href="./index.html"></a>Home</li>
+                  <li class="nav-item"><a class="nav-link" href="./random.html">Random Player</a></li>
+        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "./second.html">Rankings</a></li>
+          <ul class="dropdown-menu">
+            <li><a class= "dropdown-item" href="">Quarterbacks/a></li>
+            <li><a class= "dropdown-item" href="">Running Backs</a></li>
+            <li><a class= "dropdown-item" href="">Wide Receivers</a></li>
+            
+           
+          </ul>
+          </li>
+        </ul>
         </div>
         </div>
     </nav>
@@ -46,31 +60,11 @@
     </section>
       <section id="playersContainer"></section>
       <section id="addBox"></section>
-      <!-- <div id="randomatic">
-        <h1>Pick a Random Player</h1>
-        <div id="randoButts">
-          <button id="hailMaryQB">Random QB</button>
-          <button id="hailMaryWR">Random WR</button>
-          <button id="hailMaryRB">Random RB</button>
-        </div>
-        <section id="randomTeamBox">
-          <h1>Team of Random Players</h1>
-          <div>
-            <h3>QuarterBacks</h3>
-            <ul id="randQbBox"></ul>
-          </div>
-          <div>
-            <h3>Wide Receivers</h3>
-            <ul id="randWrBox"></ul>
-          </div>
-          <div>
-            <h3>Running Backs</h3>
-            <ul id="randRbBox"></ul>
-          </div>
-        </section>
-      </div>
-    </main> -->
-
+      <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./index.js"></script>
   </body>
