--- a/client/index.html
+++ b/client/index.html
@@ -21,13 +21,14 @@
           </button>
           <div id = "main_menu" class="collapse navbar-collapse">
                   <ul class="navbar-nav me-auto">
-                  <li class= "nav-item"><a class = "nav-link active" href="./index.html"></a>Home</li>
+                  <li class= "nav-item"><a class = "nav-link" href="./index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="./random.html">Random Player</a></li>
-        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "./second.html">Rankings</a></li>
+        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "">Rankings</a></li>
           <ul class="dropdown-menu">
-            <li><a class= "dropdown-item" href="">Quarterbacks/a></li>
-            <li><a class= "dropdown-item" href="">Running Backs</a></li>
-            <li><a class= "dropdown-item" href="">Wide Receivers</a></li>
+            <li><a class= "dropdown-item" href="./second.html">Rankings Home</a></li>
+            <li><a class= "dropdown-item" href="./qb.html">Quarterbacks</a></li>
+            <li><a class= "dropdown-item" href="./rb.html">Running Backs</a></li>
+            <li><a class= "dropdown-item" href="./wr.html">Wide Receivers</a></li>
             
            
           </ul>
