--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,9 @@
           </button>
           <div id = "main_menu" class="collapse navbar-collapse">
                   <ul class="navbar-nav me-auto">
-                  <li class= "nav-item"><a class = "nav-link" href="./index.html">home</a></li>
+                  <li class= "nav-item"><a class = "nav-link" href="./index.html">Home</a></li>
                   <li class="nav-item"><a class="nav-link" href="./random.html">Random Player</a></li>
-        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "">Rankings</a></li>
+        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "">Rankings</a>
           <ul class="dropdown-menu">
             <li><a class= "dropdown-item" href="./second.html">Rankings Home</a></li>
             <li><a class= "dropdown-item" href="./qb.html">Quarterbacks</a></li>
