--- a/client/random.html
+++ b/client/random.html
@@ -16,9 +16,50 @@
   <body class="home_body">
     <nav class="navbar navbar-dark bg-dark navbar-expand">
       <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-          <a class="nav-link nav-size" href="./index.html">Home</a>
-          <a class="nav-link nav-size" href="./second.html">Rankings</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main_menu"
+          aria-controls="main_menu"
+          aria-expanded="false"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="main_menu" class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./random.html">Random Player</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                role="button"
+                data-bs-toggle="dropdown"
+                href=""
+                >Rankings</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./second.html"
+                    >Rankings Home</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./qb.html">Quarterbacks</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./rb.html">Running Backs</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./wr.html">Wide Receivers</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -46,5 +87,10 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./second.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
