--- a/client/random.html
+++ b/client/random.html
@@ -65,9 +65,9 @@
     </nav>
     <h1>Pick a Random Player</h1>
     <div id="randoButts">
-      <button id="hailMaryQB">Random QB</button>
-      <button id="hailMaryWR">Random WR</button>
-      <button id="hailMaryRB">Random RB</button>
+      <button id="hailMaryQB" class="btn btn-secondary">Random QB</button>
+      <button id="hailMaryWR" class="btn btn-secondary">Random WR</button>
+      <button id="hailMaryRB" class="btn btn-secondary">Random RB</button>
     </div>
     <section id="randomTeamBox">
       <h1>Team of Random Players</h1>
