--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
           <option value="WR">RB</option>
         </select>
 
-        <button>Add Player</button>
+        <button class="btn btn-dark">Add Player</button>
       </form>
     </section>
       <section id="playersContainer"></section>
