--- a/client/index.html
+++ b/client/index.html
@@ -13,29 +13,55 @@
     />
     <title>Fantasy Football Home</title>
   </head>
-  <body class = "home_body">
-        <nav class="navbar navbar-dark bg-dark navbar-expand">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target = "#main_menu" aria-controls="main_menu" aria-expanded="false">
-            <span class= "navbar-toggler-icon"></span>
-          </button>
-          <div id = "main_menu" class="collapse navbar-collapse">
-                  <ul class="navbar-nav me-auto">
-                  <li class= "nav-item"><a class = "nav-link" href="./index.html">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="./random.html">Random Player</a></li>
-        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "">Rankings</a>
-          <ul class="dropdown-menu">
-            <li><a class= "dropdown-item" href="./second.html">Rankings Home</a></li>
-            <li><a class= "dropdown-item" href="./qb.html">Quarterbacks</a></li>
-            <li><a class= "dropdown-item" href="./rb.html">Running Backs</a></li>
-            <li><a class= "dropdown-item" href="./wr.html">Wide Receivers</a></li>
-            
-           
+  <body class="home_body">
+    <nav class="navbar navbar-dark bg-dark navbar-expand">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main_menu"
+          aria-controls="main_menu"
+          aria-expanded="false"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="main_menu" class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./random.html">Random Player</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                role="button"
+                data-bs-toggle="dropdown"
+                href=""
+                >Rankings</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./second.html"
+                    >Rankings Home</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./qb.html">Quarterbacks</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./rb.html">Running Backs</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./wr.html">Wide Receivers</a>
+                </li>
+              </ul>
+            </li>
           </ul>
-          </li>
-        </ul>
         </div>
-        </div>
+      </div>
     </nav>
     <header id="homeHead">
       <h1>Who Should I Start?</h1>
@@ -43,8 +69,7 @@
         <h2>Which of These QBS Would you Start?</h2>
       </div>
     </header>
-    <main>
-        <section id = "add_player">
+    <section id="add_player">
       <form id="add">
         <h2>Add A Player</h2>
         <input type="text" id="name" placeholder="Player Name" />
@@ -59,11 +84,10 @@
         <button class="btn btn-dark">Add Player</button>
       </form>
     </section>
-      <section id="playersContainer"></section>
-      <section id="addBox"></section>
-      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-      <script src="./index.js"></script>
-      <script
+    <section id="playersContainer"></section>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./index.js"></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
